--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "dprint fmt",
     "start": "ts-node src/cli/cli.ts",
     "test": "jest",
+    "test:cov": "jest --coverage",
     "lint": "eslint src/**/*.ts",
     "start:web": "parcel web/index.html web/commands.html --dist-dir temp/",
     "build:web": "rimraf docs/ && parcel build web/index.html web/commands.html --dist-dir docs/ --public-url /padtools_ts/"
