--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,7 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm run test:cov
-    - name: Upload coverage report
-      uses: actions/upload-artifact@v4
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v4
       with:
-        name: code-coverage-report
-        path: coverage/
+        token: ${{ secrets.CODECOV_TOKEN }}
