fix: Resolve npm deprecated warnings for inflight and glob

--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "overrides": {
+    "test-exclude": "7.0.1"
   }
 }
