--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "ts-node src/cli/cli.ts",
     "test": "jest",
     "test:cov": "jest --coverage",
+    "update-golden-files": "node tests/cli/E2E/updateGoldenFile.js",
     "lint": "eslint src/**/*.ts",
     "start:web": "parcel web/index.html web/commands.html --dist-dir temp/",
     "build:web": "rimraf docs/ && parcel build web/index.html web/commands.html --dist-dir docs/ --public-url /padtools_ts/"
