--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lint": "eslint src/**/*.ts",
     "start:web": "parcel web/index.html web/commands.html --dist-dir temp/",
     "build:web": "rimraf docs/ && parcel build web/index.html web/commands.html --dist-dir docs/ --public-url /padtools_ts/",
-    "convert:web": "ts-node web/utility/convert.ts"
+    "convert:web:commands": "ts-node web/utility/convert_commands.ts",
+    "convert:web:render_options": "ts-node web/utility/convert_render_options.ts"
   },
   "keywords": [
     "pad",
