feat: Adjust web app relative paths for global installation
- Refactored package.json scripts to differentiate between local/npm and GitHub Pages builds.
- Introduced  for relative path asset generation, used in .
- Renamed original  to  for GitHub Pages-specific absolute URLs.
- Rebuilt docs to reflect relative asset paths, ensuring correct functionality when globally installed.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "build": "rimraf dist && tsc",
-    "prepublishOnly": "npm run build",
+    "prepublishOnly": "npm run build && npm run build:web",
     "format": "dprint fmt",
     "start": "ts-node src/cli/cli.ts",
     "test": "jest",
@@ -19,7 +19,8 @@
     "update-spd-golden-files": "node tests/spd/E2E/updateGoldenFile.js",
     "lint": "eslint src/**/*.ts web/**/*.ts",
     "start:web": "parcel web/index.html web/commands.html --dist-dir temp/",
-    "build:web": "rimraf docs/ && parcel build web/index.html web/commands.html --dist-dir docs/ --public-url /padtools_ts/",
+    "build:web": "rimraf docs/ && parcel build web/index.html web/commands.html --dist-dir docs/",
+    "build:web:gh-pages": "rimraf docs/ && parcel build web/index.html web/commands.html --dist-dir docs/ --public-url /padtools_ts/",
     "convert:web:commands": "ts-node web/utility/convert_commands.ts",
     "convert:web:render_options": "ts-node web/utility/convert_render_options.ts"
   },
