--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,10 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm run test:cov
+    - name: Install Playwright Browsers
+      run: npx playwright install --with-deps
+    - name: Run E2E tests
+      run: npm run test:e2e
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
       with:
