--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "README.md"
   ],
   "scripts": {
-    "build": "rimraf dist/cli dist/spd && tsc",
+    "build": "rimraf dist/cli dist/spd dist/index.d.ts dist/index.js && tsc",
     "prepublishOnly": "npm run build && npm run build:web",
     "format": "dprint fmt",
     "start": "ts-node src/cli/cli.ts",
