--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"test:cov": "jest --coverage",
 		"update-cli-golden-files": "node tests/cli/E2E/updateGoldenFile.js",
 		"update-spd-golden-files": "node tests/spd/E2E/updateGoldenFile.js",
+		"update-web-golden-files": "node tests/web/updateGoldenFile.js",
 		"lint": "biome lint .",
 		"check": "biome check .",
 		"check:apply": "biome check --write --unsafe .",
